mobile viewport 3d changes

--- a/HYS/index.html
+++ b/HYS/index.html
@@ -50,6 +50,7 @@
           <div class="btnintro" id="twerk">Twerk</div>
           
         </div>
+        <!-- <span></span>
         <span></span>
         <span></span>
         <span></span>
@@ -70,8 +71,7 @@
         <span></span>
         <span></span>
         <span></span>
-        <span></span>
-        <span></span>
+        <span></span> -->
         <!-- <button class="custom-btn btn-12"><span>Lets Go!</span><span>Story Time!</span></button> -->
         <div  id="goToStory">Go To Story</div>
      </div>
