--- a/HYS/index.html
+++ b/HYS/index.html
@@ -237,7 +237,7 @@
   </div>
 
     <div class="vwdiv" id="animatedsvg">
-    <div class="cardcontainer">
+    <!-- <div class="cardcontainer"> -->
       <div class="cardsheismy">
 
         
@@ -260,7 +260,7 @@
         </h1>
         
       </div>
-    </div>
+    <!-- </div> -->
   </div>
 
 
