--- a/HYS/index.html
+++ b/HYS/index.html
@@ -26,7 +26,7 @@
     <main>
       <div id="cover"> 
         <div id="backToDance">See me dance again</div>
-        <canvas id="cover3d"></canvas>
+        <!-- <canvas id="cover3d"></canvas> -->
         <div class="cardcontainer1" id="introEyes" >
         <div class="card">
           <h1>Scroll to Read Story</h1>
@@ -132,7 +132,7 @@
     </div>
     
     <div class="vwdiv">
-      <div class="area" >
+      <div class="area">
         <div class="circles">
                 <div class="heart"></div>
                 <div class="heart"></div>
@@ -148,7 +148,7 @@
   </div >
 
   
-    <div class="cardcontainer" id="Opadiv0">
+    <div class="cardcontainer" >
       <div class="card" >
         <p>Everything changed when she arrived. The eyes! So beautiful, So Captivating.....
           I can see the stars shining through her eyes. Thoes damn eyes.... Is where everything began
@@ -161,7 +161,7 @@
 
   <div class="vwdiv">
   
-    <div class="cardcontainer" id="Opadiv1">
+    <div class="cardcontainer">
       <div class="card" >
         <p>Just Like old friends seeing each other after a long time, we talked, we laughed, we shared,
           our ideas, mindset, everything fit together just like jigsaw puzzle. Real Perfect fit.
@@ -171,7 +171,7 @@
   </div>
 
   <div class="vwdiv">
-    <div class="cardcontainer" id="Opadiv2">
+    <div class="cardcontainer">
       <div class="card">
         <h1>The Cloudy Kiss</h1>
         <p>I dont wanna say its the alcohol, but let's say its 30% involved. At the balcony of 
